JEAP-6863: replace tests with parameterized tests for command and event name validation