@@ -28,7 +28,7 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import java.net.HttpURLConnection;
 import java.net.Proxy;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -108,7 +108,7 @@ public class MessagingSigningIT extends KafkaIntegrationTestBase {
 
         Mockito.verify(messagingMessageListener, Mockito.timeout(TEST_TIMEOUT)).receive(Mockito.any());
 
-        HttpURLConnection conn = (HttpURLConnection) new URL("http://127.0.0.1:" + localServerPort + "/actuator/prometheus").openConnection(Proxy.NO_PROXY);
+        HttpURLConnection conn = (HttpURLConnection) URI.create("http://127.0.0.1:" + localServerPort + "/actuator/prometheus").toURL().openConnection(Proxy.NO_PROXY);
         conn.setRequestMethod("GET");
         final String metrics = new String(conn.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         assertMessagingMetricsCreated(metrics);
